# amkt-v2

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-and-test.yml  integration-tests.yml
contracts/: .env.example  foundry.toml  lcov.info  remappings.txt  slither.config.json
contracts/periphery/: Fulfiller.sol  IssuanceQuoter.sol  Quoter.sol  TransferAll.sol  astETH.sol  quoter.sol
contracts/src/: Common.sol  Governor.sol  IndexToken.sol  Vault.sol
contracts/test/: BaseTest.t.sol  (+1 more)
docs/: book.toml
sdk/: Cargo.toml
sdk/arb/: Cargo.toml
sdk/arb/src/: eth_executor.rs  main.rs  orchestrator.rs  truth.rs  utils.rs
sdk/arb/src/api/: mod.rs
sdk/arb/src/strategy/: long_tail_float.rs  mod.rs
sdk/bindings/src/: IERC20.rs  _0_mainnet_fork.rs  _1_deploy_contracts.rs  _2_prepare_multisig.rs  _3_set_initial_bounty.rs  _4_claim_vault_ownership.rs  _5_fulfill_initial_bounty.rs  _6_upgrade_token.rs  _7_transfer_to_timelock.rs  access_control.rs  active_bounty.rs  address.rs  address_upgradeable.rs  alongside_governor.rs  bitmap.rs  checkpoints.rs  config.rs  config_helper.rs  context_upgradeable.rs  counters.rs  counters_upgradeable.rs  dealer.rs  double_ended_queue.rs  ecdsa.rs  ecdsa_upgradeable.rs  eip712_upgradeable.rs  erc165.rs  erc1967_proxy.rs  erc1967_upgrade.rs  erc20.rs  erc20_permit.rs  erc20_permit_upgradeable.rs  erc20_upgradeable.rs  erc20_votes.rs  erc20_votes_mock.rs  erc20_votes_upgradeable.rs  fixed_point.rs  flash_minter.rs  governor.rs  governor_counting_simple.rs  (+67 more)
sdk/bot/: Cargo.toml
sdk/bot/src/: eth_executor.rs  main.rs  orchestrator.rs  truth.rs  utils.rs
sdk/bot/src/api/: cmc.rs
sdk/bot/src/strategy/: approval.rs  long_tail_float.rs  mod.rs
sdk/rebalance/: .gitignore  Cargo.toml
sdk/rebalance/src/: indicies.rs  main.rs  truth.rs
sdk/rebalance/src/bounty/: mod.rs
sdk/rebalance/src/data/: cmc.rs  mod.rs  multi.rs
simulation/: inflation.py
(+135 files in other folders)
