[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
console-subscriber = "0.2.0"
ethers = "2.0.10"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = "0.11.22"
rug = "1.22.0"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { features = ["full"], version = "1.33.0" }
tracing = "0.1.39"
v3 = { git="https://github.com/nhtyy/v3-rs.git" }
bindings = { workspace = true }
futures = "0.3.28"
tracing-subscriber = "0.3.17"
serde_json = "1.0.107"
clap = { version = "4.4.7", features = ["derive"] }
thiserror = "1.0.50"
