[package]
name = "rebalance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
anyhow = { version = "1.0.68", features = ["backtrace"] }
clap = { version = "4.1.1", features = ["derive"] }
chrono = {version = "0.4.26", features = ["serde"]}
ethers = {version = "2.0", features = ["ledger"]}
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
bindings = { path = "../bindings" }

[dev-dependencies]
proptest = "1.0.0"
